fix：Priceの表のタグ修正、それに伴うCSS修正

--- a/src/index.html
+++ b/src/index.html
@@ -743,82 +743,62 @@
             </picture>
           </div>
 
+          <div class="price__table">
 
-          <dl class="price__items">
+            <ul class="price__items">
+              <li class="price__item">
+                <h3 class="price__sub-title title-line">ライセンス講習</h3>
+                <dl class="price__list price-list">
+                  <dt>オープンウォーターダイバーコース</dt>
+                  <dd>¥50,000</dd>
+                  <dt>アドバンスドオープンウォーターコース</dt>
+                  <dd>¥60,000</dd>
+                  <dt>レスキュー＋EFRコース</dt>
+                  <dd>¥70,000</dd>
+                </dl>
+              </li>
+              <li class="price__item">
+                <h3 class="price__sub-title title-line">体験ダイビング</h3>
+                <dl class="price__list price-list">
+                  <dt>ビーチ体験ダイビング(半日)</dt>
+                  <dd>¥7,000</dd>
+                  <dt>ビーチ体験ダイビング(1日)</dt>
+                  <dd>¥14,000</dd>
+                  <dt>ボート体験ダイビング(半日)</dt>
+                  <dd>¥10,000</dd>
+                  <dt>ボート体験ダイビング(1日)</dt>
+                  <dd>¥18,000</dd>
+                </dl>
+              </li>
+              <li class="price__item">
+                <h3 class="price__sub-title title-line">ファンダイビング</h3>
+                <dl class="price__list price-list">
+                  <dt>ビーチダイビング(2ダイブ)</dt>
+                  <dd>¥14,000</dd>
+                  <dt>ボートダイビング(2ダイブ)</dt>
+                  <dd>¥18,000</dd>
+                  <dt>スペシャルダイビング(2ダイブ)</dt>
+                  <dd>¥24,000</dd>
+                  <dt>ナイトダイビング(1ダイブ)</dt>
+                  <dd>¥10,000</dd>
+                </dl>
+              </li>
+              <li class="price__item">
+                <h3 class="price__sub-title title-line">スペシャルダイビング</h3>
+                <dl class="price__list price-list">
+                  <dt>貸切ダイビング(2ダイブ)</dt>
+                  <dd>¥24,000</dd>
+                  <dt>1日ダイビング(3ダイブ)</dt>
+                  <dd>¥32,000</dd>
+                </dl>
+              </li>
+            </ul>
 
-            <div class="price__item">
-              <dt class="price__term title-line">ライセンス講習</dt>
-              <dd class="price__description">
-                <p class="price__heading">オープンウォーターダイバーコース</p>
-                <p class="price__price">¥50,000</p>
-              </dd>
-              <dd class="price__description">
-                <p class="price__heading">アドバンスドオープンウォーターコース</p>
-                <p class="price__price">¥60,000</p>
-              </dd>
-              <dd class="price__description">
-                <p class="price__heading">レスキュー＋EFRコース</p>
-                <p class="price__price">¥70,000</p>
-              </dd>
-            </div>
-
-            <div class="price__item">
-              <dt class="price__term title-line">体験ダイビング</dt>
-              <dd class="price__description">
-                <p class="price__heading">ビーチ体験ダイビング(半日)</p>
-                <p class="price__price">¥7,000</p>
-              </dd>
-              <dd class="price__description">
-                <p class="price__heading">ビーチ体験ダイビング(1日)</p>
-                <p class="price__price">¥14,000</p>
-              </dd>
-              <dd class="price__description">
-                <p class="price__heading">ボート体験ダイビング(半日)</p>
-                <p class="price__price">¥10,000</p>
-              </dd>
-              <dd class="price__description">
-                <p class="price__heading">ボート体験ダイビング(1日)</p>
-                <p class="price__price">¥18,000</p>
-              </dd>
-            </div>
-
-            <div class="price__item">
-              <dt class="price__term title-line">ファンダイビング</dt>
-              <dd class="price__description">
-                <p class="price__heading">ビーチダイビング(2ダイブ)</p>
-                <p class="price__price">¥14,000</p>
-              </dd>
-              <dd class="price__description">
-                <p class="price__heading">ボートダイビング(2ダイブ)</p>
-                <p class="price__price">¥18,000</p>
-              </dd>
-              <dd class="price__description">
-                <p class="price__heading">スペシャルダイビング(2ダイブ)</p>
-                <p class="price__price">¥24,000</p>
-              </dd>
-              <dd class="price__description">
-                <p class="price__heading">ナイトダイビング(1ダイブ)</p>
-                <p class="price__price">¥10,000</p>
-              </dd>
-            </div>
-
-            <div class="price__item">
-              <dt class="price__term title-line">スペシャルダイビング</dt>
-              <dd class="price__description">
-                <p class="price__heading">貸切ダイビング(2ダイブ)</p>
-                <p class="price__price">¥24,000</p>
-              </dd>
-              <dd class="price__description">
-                <p class="price__heading">1日ダイビング(3ダイブ)</p>
-                <p class="price__price">¥32,000</p>
-              </dd>
-            </div>
-
-          </dl>
+          </div>
 
         </div>
 
-        <div class="price__btn ">
+        <div class="price__btn">
           <a href="#" class="button">
             <p>View more</p>
           </a>
