ハンバーガーのタグをbuttonにする

--- a/src/index.html
+++ b/src/index.html
@@ -52,11 +52,11 @@
         </a>
       </h1>
 
-      <div class="header__drawer hamburger js-hamburger">
+      <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
         <span></span>
-      </div>
+      </button>
 
       <!-- drawer -->
       <nav class="header__sp-nav sp-nav js-sp-nav">
