--- a/src/index.html
+++ b/src/index.html
@@ -268,6 +268,11 @@
 
   <main>
 
+    <div class="loading js-loading">
+      <div class="loading__circle"></div>
+      <div class="loading__text">loading...</div>
+    </div>
+
     <div class="mv">
       <div class="mv__inner">
 
