fix：骨組み作成

--- a/src/index.html
+++ b/src/index.html
@@ -269,8 +269,12 @@
   <main>
 
     <div class="loading js-loading">
-      <div class="loading__circle"></div>
-      <div class="loading__text">loading...</div>
+      <div class="loading__wrap">
+        <div class="loading__left"></div>
+        <div class="loading__right"></div>
+      </div>
+      <!-- <div class="loading__circle"></div> -->
+      <!-- <div class="loading__text">loading...</div> -->
     </div>
 
     <div class="mv">
