--- a/src/index.html
+++ b/src/index.html
@@ -277,6 +277,14 @@
         <div class="loading__left js-loading-left"></div>
         <div class="loading__right js-loading-right"></div>
       </div>
+      <div class="loading__header heroTitle js-loading-header">
+        <div class="loading__title heroTitle__title js-loading-title">
+          <p>DIVING</p>
+        </div>
+        <div class="loading__subtitle heroTitle__subtitle js-loading-subtitle">
+          <p>into the ocean</p>
+        </div>
+      </div>
     </div>
 
     <div class="mv">
@@ -318,11 +326,11 @@
 
           </div>
 
-          <div class="mv__header js-loading-header">
-            <div class="mv__title js-loading-title">
+          <div class="mv__header heroTitle js-loading-header">
+            <div class="mv__title heroTitle__title js-loading-title">
               <p>DIVING</p>
             </div>
-            <div class="mv__subtitle js-loading-subtitle">
+            <div class="mv__subtitle heroTitle__subtitle js-loading-subtitle">
               <p>into the ocean</p>
             </div>
           </div>
