fix：ドロワーでロゴをクリックしたときにドロワーを閉じる

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     <div class="header__inner">
 
       <h1 class="header__logoBlock">
-        <a href="#" class="header__logoLink">
+        <a href="#" class="header__logoLink js-logoLink">
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
         </a>
       </h1>
