--- a/src/index.html
+++ b/src/index.html
@@ -273,6 +273,7 @@
   <main>
 
     <div class="loading js-loading">
+      <div class="loading__circle js-loading-circle"></div>
       <div class="loading__wrap">
         <div class="loading__left js-loading-left"></div>
         <div class="loading__right js-loading-right"></div>
