fix：トップへ戻るボタンのクリックでコンソールエラーが出ている不具合を修正

--- a/src/index.html
+++ b/src/index.html
@@ -879,7 +879,7 @@
     </section>
 
     <div class="to-top" id="page-top">
-      <a href="#top"><span></span></a>
+      <a href="#"><span></span></a>
     </div>
 
   </main>
