fix：クラス名被りの対策と修正
・xxx__title -> xxx__section-title
・info__title -> info__subtitle

--- a/src/index.html
+++ b/src/index.html
@@ -344,7 +344,7 @@
     <section id="campaign" class="campaign layout-campaign">
       <div class="campaign__inner inner">
 
-        <div class="campaign__title section-title">
+        <div class="campaign__section-title section-title">
           <p class="section-title__eng">Campaign</p>
           <h2 class="section-title__ja">キャンペーン</h2>
         </div>
@@ -481,7 +481,7 @@
     <section id="about" class="about layout-about">
       <div class="about__inner inner">
 
-        <div class="about__title section-title">
+        <div class="about__section-title section-title">
           <p class="section-title__eng">About us</p>
           <h2 class="section-title__ja">私たちについて</h2>
         </div>
@@ -534,7 +534,7 @@
     <section id="info" class="info layout-info">
       <div class="info__inner inner">
 
-        <div class="info__title section-title">
+        <div class="info__section-title section-title">
           <p class="section-title__eng">Information</p>
           <h2 class="section-title__ja">ダイビング情報</h2>
         </div>
@@ -549,8 +549,8 @@
           </div>
 
           <div class="info__body">
-            <div class="info__title title-line">
-              <h3 class="info__title-text">ライセンス講習</h3>
+            <div class="info__subtitle title-line">
+              <h3 class="info__subtitle-text">ライセンス講習</h3>
             </div>
             <div class="info__text">
               <p class="info__text-text text">当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br>
@@ -571,7 +571,7 @@
     <section id="blog" class="blog layout-blog">
       <div class="blog__inner inner">
 
-        <div class="blog__title section-title section-title--white">
+        <div class="blog__section-title section-title section-title--white">
           <p class="section-title__eng">Blog</p>
           <h2 class="section-title__ja">ブログ</h2>
         </div>
@@ -646,7 +646,7 @@
     <section id="voice" class="voice layout-voice">
       <div class="voice__inner inner">
 
-        <div class="voice__title section-title">
+        <div class="voice__section-title section-title">
           <p class="section-title__eng">Voice</p>
           <h2 class="section-title__ja">お客様の声</h2>
         </div>
@@ -739,7 +739,7 @@
     <section id="price" class="price layout-price">
       <div class="price__inner inner">
 
-        <div class="price__title section-title">
+        <div class="price__section-title section-title">
           <p class="section-title__eng">Price</p>
           <h2 class="section-title__ja">料金一覧</h2>
         </div>
@@ -851,7 +851,7 @@
 
               <div class="contact__bottom">
 
-                <div class="contact__title section-title">
+                <div class="contact__section-title section-title">
                   <p class="section-title__eng">Contact</p>
                   <h2 class="section-title__ja">お問い合わせ</h2>
                 </div>
