--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,10 @@
   <!-- inview -->
   <script defer src="./assets/js/jquery.inview.min.js"></script>
   <!-- GSAP -->
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <!-- Original JS -->
   <script defer src="./assets/js/script.js"></script>
-  <script defer src="./assets/js/gsap.js"></script>
 </head>
 
 <body>
