fix：js用のクラスを修正

--- a/src/index.html
+++ b/src/index.html
@@ -294,7 +294,7 @@
           <div class="mv__images">
 
             <!-- Swiper -->
-            <div class="swiper mv__swiper js-mv__swiper">
+            <div class="swiper mv__swiper js-mv-swiper">
               <div class="swiper-wrapper mv__swiper-wrapper">
                 <div class="swiper-slide mv__swiper-img">
                   <picture>
@@ -348,7 +348,7 @@
           <h2 class="section-title__ja">キャンペーン</h2>
         </div>
 
-        <div class="swiper campaign__swiper js-campaign__swiper">
+        <div class="swiper campaign__swiper js-campaign-swiper">
           <div class="swiper-wrapper campaign-cards">
 
             <div class="swiper-slide campaign__card campaign-card">
