--- a/src/index.html
+++ b/src/index.html
@@ -577,7 +577,7 @@
 
         <div class="blog__cards blog-cards">
 
-          <div class="blog__card blog-card">
+          <div class="blog-cards__card blog-card">
             <a class="blog-card__link" href="#">
               <div class="blog-card__img">
                 <img src="./assets/images/common/blog_1.jpg" alt="ピンクの珊瑚礁の写真">
@@ -595,7 +595,7 @@
             </a>
           </div>
 
-          <div class="blog__card blog-card">
+          <div class="blog-cards__card blog-card">
             <a class="blog-card__link" href="#">
               <div class="blog-card__img">
                 <img src="./assets/images/common/blog_2.jpg" alt="海亀が海中を泳いでいる様子">
@@ -613,7 +613,7 @@
             </a>
           </div>
 
-          <div class="blog__card blog-card">
+          <div class="blog-cards__card blog-card">
             <a class="blog-card__link" href="#">
               <div class="blog-card__img">
                 <img src="./assets/images/common/blog_3.jpg" alt="イソギンチャクに隠れているカクレクマノミ">
