fix：クラス名修正（campaign-cards）

--- a/src/index.html
+++ b/src/index.html
@@ -351,7 +351,7 @@
         <div class="swiper campaign__swiper js-campaign-swiper">
           <div class="swiper-wrapper campaign-cards">
 
-            <div class="swiper-slide campaign__card campaign-card">
+            <div class="swiper-slide campaign-cards__card campaign-card">
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_1.jpg" alt="多種多少な熱帯魚が泳いでいる様子">
               </div>
@@ -378,7 +378,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide campaign__card campaign-card">
+            <div class="swiper-slide campaign-cards__card campaign-card">
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_2.jpg" alt="透き通った浅瀬に浮かぶ船と山と空の景色">
               </div>
@@ -405,7 +405,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide campaign__card campaign-card">
+            <div class="swiper-slide campaign-cards__card campaign-card">
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_3.jpg" alt="水中を漂う多数のクラゲ">
               </div>
@@ -432,7 +432,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide campaign__card campaign-card">
+            <div class="swiper-slide campaign-cards__card campaign-card">
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_4.jpg" alt="ダイバーの集団が海で浮かんでいる様子">
               </div>
