fix：クラス名修正（voice-cards）

--- a/src/index.html
+++ b/src/index.html
@@ -652,7 +652,7 @@
 
         <div class="voice__cards voice-cards">
 
-          <div class="voice__card voice-card">
+          <div class="voice-cards__card voice-card">
             <div class="voice-card__head">
 
               <div class="voice-card__left">
@@ -688,7 +688,7 @@
 
           </div>
 
-          <div class="voice__card voice-card">
+          <div class="voice-cards__card voice-card">
             <div class="voice-card__head">
 
               <div class="voice-card__left">
