--- a/src/index.html
+++ b/src/index.html
@@ -273,15 +273,15 @@
 
     <div class="loading js-loading">
       <div class="loading__circle js-loading-circle"></div>
-      <div class="loading__wrap">
+      <div class="loading__wrap js-loading-imageWrap">
         <div class="loading__left js-loading-left"></div>
         <div class="loading__right js-loading-right"></div>
       </div>
-      <div class="loading__header heroTitle js-loading-header">
-        <div class="loading__title heroTitle__title js-loading-title">
+      <div class="loading__header heroTitle">
+        <div class="heroTitle__title js-loading-title">
           <p>DIVING</p>
         </div>
-        <div class="loading__subtitle heroTitle__subtitle js-loading-subtitle">
+        <div class="heroTitle__subtitle js-loading-subtitle">
           <p>into the ocean</p>
         </div>
       </div>
@@ -326,11 +326,11 @@
 
           </div>
 
-          <div class="mv__header heroTitle js-loading-header">
-            <div class="mv__title heroTitle__title js-loading-title">
+          <div class="mv__header heroTitle">
+            <div class="heroTitle__title">
               <p>DIVING</p>
             </div>
-            <div class="mv__subtitle heroTitle__subtitle js-loading-subtitle">
+            <div class="heroTitle__subtitle">
               <p>into the ocean</p>
             </div>
           </div>
