fix：sp-nav,ft-navのクラス名整理

--- a/src/index.html
+++ b/src/index.html
@@ -68,9 +68,10 @@
 
             <div class="sp-nav__menu-items menu">
 
-              <div class="sp-nav__menu-items-wrap menu-wrap">
+              <!-- <div class="sp-nav__menu-items-wrap menu__wrap"> -->
+              <div class="menu__column-wrap">
 
-                <div class="sp-nav__menu-item menu__column">
+                <div class="menu__column">
 
                   <div class="menu__item">
                     <div class="menu__title">
@@ -93,7 +94,7 @@
 
                 </div>
 
-                <div class="sp-nav__menu-item menu__column">
+                <div class="menu__column">
 
                   <div class="menu__item">
                     <div class="menu__title">
@@ -118,9 +119,10 @@
 
               </div>
 
-              <div class="sp-nav__menu-items-wrap menu-wrap">
+              <!-- <div class="sp-nav__menu-items-wrap menu__wrap"> -->
+              <div class="menu__column-wrap">
 
-                <div class="sp-nav__menu-item menu__column">
+                <div class="menu__column">
 
                   <div class="menu__item">
 
@@ -143,7 +145,7 @@
 
                 </div>
 
-                <div class="sp-nav__menu-item menu__column">
+                <div class="menu__column">
 
                   <div class="menu__item">
 
@@ -914,125 +916,123 @@
         <div class="ft-nav__inner">
           <div class="ft-nav__wrap">
 
-            <div class="ft-nav__body">
+            <!-- <div class="ft-nav__body"> -->
 
-              <div class="ft-nav__menu-items menu">
+            <div class="ft-nav__menu-items menu">
 
-                <div class="ft-nav__menu-items-wrap menu-wrap">
+              <div class="menu__column-wrap">
 
-                  <div class="ft-nav__menu-item menu__column">
+                <div class="ft-nav__menu-item menu__column">
 
-                    <div class="menu__item">
-                      <div class="menu__title">
-                        <a href="#campaign">キャンペーン</a>
-                      </div>
-                      <ul class="menu__list">
-                        <li><a href="#">ライセンス取得</a></li>
-                        <li><a href="#">貸切体験ダイビング</a></li>
-                        <li><a href="#">ナイトダイビング</a></li>
-                      </ul>
+                  <div class="menu__item">
+                    <div class="menu__title">
+                      <a href="#campaign">キャンペーン</a>
                     </div>
-
-                    <div class="menu__item">
-
-                      <div class="menu__title">
-                        <a href="#about">私たちについて</a>
-                      </div>
-
-                    </div>
-
+                    <ul class="menu__list">
+                      <li><a href="#">ライセンス取得</a></li>
+                      <li><a href="#">貸切体験ダイビング</a></li>
+                      <li><a href="#">ナイトダイビング</a></li>
+                    </ul>
                   </div>
 
-                  <div class="ft-nav__menu-item menu__column">
+                  <div class="menu__item">
 
-                    <div class="menu__item">
-                      <div class="menu__title">
-                        <a href="#info">ダイビング情報</a>
-                      </div>
-                      <ul class="menu__list">
-                        <li><a href="#">ライセンス取得</a></li>
-                        <li><a href="#">体験ダイビング</a></li>
-                        <li><a href="#">ファンダイビング</a></li>
-                      </ul>
-                    </div>
-
-                    <div class="menu__item">
-
-                      <div class="menu__title">
-                        <a href="#blog">ブログ</a>
-                      </div>
-
+                    <div class="menu__title">
+                      <a href="#about">私たちについて</a>
                     </div>
 
                   </div>
 
                 </div>
 
-                <div class="ft-nav__menu-items-wrap menu-wrap">
+                <div class="ft-nav__menu-item menu__column">
 
-                  <div class="ft-nav__menu-item menu__column">
-
-                    <div class="menu__item">
-
-                      <div class="menu__title">
-                        <a href="#voice">お客様の声</a>
-                      </div>
-
+                  <div class="menu__item">
+                    <div class="menu__title">
+                      <a href="#info">ダイビング情報</a>
                     </div>
+                    <ul class="menu__list">
+                      <li><a href="#">ライセンス取得</a></li>
+                      <li><a href="#">体験ダイビング</a></li>
+                      <li><a href="#">ファンダイビング</a></li>
+                    </ul>
+                  </div>
 
-                    <div class="menu__item">
-                      <div class="menu__title">
-                        <a href="#price">料金一覧</a>
-                      </div>
-                      <ul class="menu__list">
-                        <li><a href="#">ライセンス講習</a></li>
-                        <li><a href="#">体験ダイビング</a></li>
-                        <li><a href="#">ファンダイビング</a></li>
-                      </ul>
+                  <div class="menu__item">
+
+                    <div class="menu__title">
+                      <a href="#blog">ブログ</a>
                     </div>
 
                   </div>
 
-                  <div class="ft-nav__menu-item menu__column">
+                </div>
 
-                    <div class="menu__item">
+              </div>
 
-                      <div class="menu__title">
-                        <a href="#">よくある質問</a>
-                      </div>
+              <div class="menu__column-wrap">
 
+                <div class="ft-nav__menu-item menu__column">
+
+                  <div class="menu__item">
+
+                    <div class="menu__title">
+                      <a href="#voice">お客様の声</a>
                     </div>
 
-                    <div class="menu__item">
+                  </div>
 
-                      <div class="menu__title">
-                        <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
-                      </div>
+                  <div class="menu__item">
+                    <div class="menu__title">
+                      <a href="#price">料金一覧</a>
+                    </div>
+                    <ul class="menu__list">
+                      <li><a href="#">ライセンス講習</a></li>
+                      <li><a href="#">体験ダイビング</a></li>
+                      <li><a href="#">ファンダイビング</a></li>
+                    </ul>
+                  </div>
 
+                </div>
+
+                <div class="ft-nav__menu-item menu__column">
+
+                  <div class="menu__item">
+
+                    <div class="menu__title">
+                      <a href="#">よくある質問</a>
                     </div>
 
-                    <div class="menu__item">
+                  </div>
 
-                      <div class="menu__title">
-                        <a href="#">利用規約</a>
-                      </div>
+                  <div class="menu__item">
 
+                    <div class="menu__title">
+                      <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
                     </div>
 
-                    <div class="menu__item">
+                  </div>
 
-                      <div class="menu__title">
-                        <a href="#contact">お問い合わせ</a>
-                      </div>
+                  <div class="menu__item">
 
+                    <div class="menu__title">
+                      <a href="#">利用規約</a>
                     </div>
 
-                    <div class="menu__item">
+                  </div>
 
-                      <div class="menu__title">
-                        <a href="#contact">サイトマップ</a>
-                      </div>
+                  <div class="menu__item">
 
+                    <div class="menu__title">
+                      <a href="#contact">お問い合わせ</a>
+                    </div>
+
+                  </div>
+
+                  <div class="menu__item">
+
+                    <div class="menu__title">
+                      <a href="#contact">サイトマップ</a>
                     </div>
 
                   </div>
@@ -1042,6 +1042,8 @@
               </div>
 
             </div>
+
+            <!-- </div> -->
 
           </div>
         </div>
