fix：footer-navのクラス名変更

--- a/src/index.html
+++ b/src/index.html
@@ -911,18 +911,18 @@
         </div>
       </div>
 
-      <nav class="footer__ft-nav ft-nav">
+      <nav class="footer__footer-nav footer-nav">
 
-        <div class="ft-nav__inner">
-          <div class="ft-nav__wrap">
+        <div class="footer-nav__inner">
+          <div class="footer-nav__wrap">
 
-            <!-- <div class="ft-nav__body"> -->
+            <!-- <div class="footer-nav__body"> -->
 
-            <div class="ft-nav__menu-items menu">
+            <div class="footer-nav__menu-items menu">
 
               <div class="menu__column-wrap">
 
-                <div class="ft-nav__menu-item menu__column">
+                <div class="footer-nav__menu-item menu__column">
 
                   <div class="menu__item">
                     <div class="menu__title">
@@ -945,7 +945,7 @@
 
                 </div>
 
-                <div class="ft-nav__menu-item menu__column">
+                <div class="footer-nav__menu-item menu__column">
 
                   <div class="menu__item">
                     <div class="menu__title">
@@ -972,7 +972,7 @@
 
               <div class="menu__column-wrap">
 
-                <div class="ft-nav__menu-item menu__column">
+                <div class="footer-nav__menu-item menu__column">
 
                   <div class="menu__item">
 
@@ -995,7 +995,7 @@
 
                 </div>
 
-                <div class="ft-nav__menu-item menu__column">
+                <div class="footer-nav__menu-item menu__column">
 
                   <div class="menu__item">
 
