--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
       <nav class="header__sp-nav sp-nav js-sp-nav">
 
         <div class="sp-nav__wrap">
-          <div class="sp-nav__inner">
+          <div class="sp-nav__inner inner">
 
             <div class="sp-nav__menu-items menu">
 
