--- a/src/index.html
+++ b/src/index.html
@@ -913,128 +913,55 @@
 
       <nav class="footer__footer-nav footer-nav">
 
-        <div class="footer-nav__inner">
-          <div class="footer-nav__wrap">
+        <!-- <div class="footer-nav__inner"> -->
+        <div class="footer-nav__wrap">
 
-            <!-- <div class="footer-nav__body"> -->
+          <!-- <div class="footer-nav__body"> -->
 
-            <div class="footer-nav__menu-items menu">
+          <div class="footer-nav__menu-items menu">
 
-              <div class="menu__column-wrap">
+            <div class="menu__column-wrap">
 
-                <div class="footer-nav__menu-item menu__column">
+              <div class="footer-nav__menu-item menu__column">
 
-                  <div class="menu__item">
-                    <div class="menu__title">
-                      <a href="#campaign">キャンペーン</a>
-                    </div>
-                    <ul class="menu__list">
-                      <li><a href="#">ライセンス取得</a></li>
-                      <li><a href="#">貸切体験ダイビング</a></li>
-                      <li><a href="#">ナイトダイビング</a></li>
-                    </ul>
+                <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#campaign">キャンペーン</a>
                   </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#about">私たちについて</a>
-                    </div>
-
-                  </div>
-
+                  <ul class="menu__list">
+                    <li><a href="#">ライセンス取得</a></li>
+                    <li><a href="#">貸切体験ダイビング</a></li>
+                    <li><a href="#">ナイトダイビング</a></li>
+                  </ul>
                 </div>
 
-                <div class="footer-nav__menu-item menu__column">
+                <div class="menu__item">
 
-                  <div class="menu__item">
-                    <div class="menu__title">
-                      <a href="#info">ダイビング情報</a>
-                    </div>
-                    <ul class="menu__list">
-                      <li><a href="#">ライセンス取得</a></li>
-                      <li><a href="#">体験ダイビング</a></li>
-                      <li><a href="#">ファンダイビング</a></li>
-                    </ul>
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#blog">ブログ</a>
-                    </div>
-
+                  <div class="menu__title">
+                    <a href="#about">私たちについて</a>
                   </div>
 
                 </div>
 
               </div>
 
-              <div class="menu__column-wrap">
+              <div class="footer-nav__menu-item menu__column">
 
-                <div class="footer-nav__menu-item menu__column">
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#voice">お客様の声</a>
-                    </div>
-
+                <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#info">ダイビング情報</a>
                   </div>
-
-                  <div class="menu__item">
-                    <div class="menu__title">
-                      <a href="#price">料金一覧</a>
-                    </div>
-                    <ul class="menu__list">
-                      <li><a href="#">ライセンス講習</a></li>
-                      <li><a href="#">体験ダイビング</a></li>
-                      <li><a href="#">ファンダイビング</a></li>
-                    </ul>
-                  </div>
-
+                  <ul class="menu__list">
+                    <li><a href="#">ライセンス取得</a></li>
+                    <li><a href="#">体験ダイビング</a></li>
+                    <li><a href="#">ファンダイビング</a></li>
+                  </ul>
                 </div>
 
-                <div class="footer-nav__menu-item menu__column">
+                <div class="menu__item">
 
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#">よくある質問</a>
-                    </div>
-
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
-                    </div>
-
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#">利用規約</a>
-                    </div>
-
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#contact">お問い合わせ</a>
-                    </div>
-
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#contact">サイトマップ</a>
-                    </div>
-
+                  <div class="menu__title">
+                    <a href="#blog">ブログ</a>
                   </div>
 
                 </div>
@@ -1043,10 +970,83 @@
 
             </div>
 
-            <!-- </div> -->
+            <div class="menu__column-wrap">
+
+              <div class="footer-nav__menu-item menu__column">
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="#voice">お客様の声</a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#price">料金一覧</a>
+                  </div>
+                  <ul class="menu__list">
+                    <li><a href="#">ライセンス講習</a></li>
+                    <li><a href="#">体験ダイビング</a></li>
+                    <li><a href="#">ファンダイビング</a></li>
+                  </ul>
+                </div>
+
+              </div>
+
+              <div class="footer-nav__menu-item menu__column">
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="#">よくある質問</a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="#">利用規約</a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="#contact">お問い合わせ</a>
+                  </div>
+
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="#contact">サイトマップ</a>
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
 
           </div>
+
+          <!-- </div> -->
+
         </div>
+        <!-- </div> -->
       </nav>
 
       <div class="footer__copyright">
