--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="format-detection" content="telephone=no">
   <meta name="robots" content="noindex">
-  <!-- meta情報 -->
+  <!-- meta -->
   <title>CodeUps</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -17,29 +17,22 @@
   <meta property="og:image" content="">
   <meta property="og:site_name" content="">
   <meta property="og:description" content="">
-  <!-- ファビコン -->
+  <!-- favicon -->
   <link rel="icon" href="./assets/images/common/favicon.ico">
-  <!-- Googleフォント -->
+  <!-- GoogleFont -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Gotu&family=Lato:wght@400;700&family=Noto+Sans+JP:wght@400;500;700&display=swap"
     rel="stylesheet">
-  <!-- Swiper CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
-  <!-- Original CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
-
-  <!-- JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <!-- Swiper JS -->
-  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-  <!-- inview -->
+  <!--JavaScript -->
+  <script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   <script defer src="./assets/js/jquery.inview.min.js"></script>
-  <!-- GSAP -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-  <!-- Original JS -->
   <script defer src="./assets/js/script.js"></script>
 </head>
 
