--- a/src/index.html
+++ b/src/index.html
@@ -38,34 +38,23 @@
 
 <body>
   <header class="header">
-
     <div class="header__inner">
-
       <h1 class="header__logoBlock">
         <a href="#" class="header__logoLink js-logoLink">
           <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
         </a>
       </h1>
-
       <button class="header__drawer hamburger js-hamburger">
         <span></span>
         <span></span>
         <span></span>
       </button>
-
-      <!-- drawer -->
       <nav class="header__sp-nav sp-nav js-sp-nav">
-
         <div class="sp-nav__wrap">
           <div class="sp-nav__inner inner">
-
             <div class="sp-nav__menu-items menu">
-
-              <!-- <div class="sp-nav__menu-items-wrap menu__wrap"> -->
               <div class="menu__column-wrap">
-
                 <div class="menu__column">
-
                   <div class="menu__item">
                     <div class="menu__title">
                       <a href="#campaign">キャンペーン</a>
@@ -76,19 +65,13 @@
                       <li><a href="#">ナイトダイビング</a></li>
                     </ul>
                   </div>
-
                   <div class="menu__item">
-
                     <div class="menu__title">
                       <a href="#about">私たちについて</a>
                     </div>
-
                   </div>
-
                 </div>
-
                 <div class="menu__column">
-
                   <div class="menu__item">
                     <div class="menu__title">
                       <a href="#info">ダイビング情報</a>
@@ -99,32 +82,20 @@
                       <li><a href="#">ファンダイビング</a></li>
                     </ul>
                   </div>
-
                   <div class="menu__item">
-
                     <div class="menu__title">
                       <a href="#blog">ブログ</a>
                     </div>
-
                   </div>
-
                 </div>
-
               </div>
-
-              <!-- <div class="sp-nav__menu-items-wrap menu__wrap"> -->
               <div class="menu__column-wrap">
-
                 <div class="menu__column">
-
                   <div class="menu__item">
-
                     <div class="menu__title">
                       <a href="#voice">お客様の声</a>
                     </div>
-
                   </div>
-
                   <div class="menu__item">
                     <div class="menu__title">
                       <a href="#price">料金一覧</a>
@@ -135,61 +106,39 @@
                       <li><a href="#">ファンダイビング</a></li>
                     </ul>
                   </div>
-
                 </div>
-
                 <div class="menu__column">
-
                   <div class="menu__item">
-
                     <div class="menu__title">
                       <a href="#">よくある質問</a>
                     </div>
-
                   </div>
-
                   <div class="menu__item">
-
                     <div class="menu__title">
                       <a href="#">プライバシー<br>ポリシー</a>
                     </div>
-
                   </div>
-
                   <div class="menu__item">
-
                     <div class="menu__title">
                       <a href="#">利用規約</a>
                     </div>
-
                   </div>
-
                   <div class="menu__item">
-
                     <div class="menu__title">
                       <a href="#contact">お問い合わせ</a>
                     </div>
-
                   </div>
-
                   <div class="menu__item">
-
                     <div class="menu__title">
                       <a href="#contact">サイトマップ</a>
                     </div>
-
                   </div>
-
                 </div>
-
               </div>
-
             </div>
-
           </div>
         </div>
       </nav>
-
       <nav class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
@@ -257,11 +206,8 @@
             </a>
           </li>
         </ul>
-
       </nav>
-
     </div>
-
   </header>
 
   <main>
@@ -284,11 +230,8 @@
 
     <div class="mv">
       <div class="mv__inner">
-
         <div class="mv__content">
           <div class="mv__images">
-
-            <!-- Swiper -->
             <div class="swiper mv__swiper js-mv-swiper">
               <div class="swiper-wrapper mv__swiper-wrapper">
                 <div class="swiper-slide mv__swiper-img">
@@ -316,11 +259,8 @@
                   </picture>
                 </div>
               </div>
-
             </div>
-
           </div>
-
           <div class="mv__header heroTitle">
             <div class="heroTitle__title">
               <p>DIVING</p>
@@ -329,23 +269,18 @@
               <p>into the ocean</p>
             </div>
           </div>
-
         </div>
-
       </div>
     </div>
 
     <section id="campaign" class="campaign layout-campaign">
       <div class="campaign__inner inner">
-
         <div class="campaign__section-title section-title">
           <p class="section-title__eng">Campaign</p>
           <h2 class="section-title__ja">キャンペーン</h2>
         </div>
-
         <div class="swiper campaign__swiper js-campaign-swiper">
           <div class="swiper-wrapper campaign-cards">
-
             <div class="swiper-slide campaign-cards__card campaign-card">
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_1.jpg" alt="多種多少な熱帯魚が泳いでいる様子">
@@ -372,7 +307,6 @@
                 </div>
               </div>
             </div>
-
             <div class="swiper-slide campaign-cards__card campaign-card">
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_2.jpg" alt="透き通った浅瀬に浮かぶ船と山と空の景色">
@@ -399,7 +333,6 @@
                 </div>
               </div>
             </div>
-
             <div class="swiper-slide campaign-cards__card campaign-card">
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_3.jpg" alt="水中を漂う多数のクラゲ">
@@ -426,7 +359,6 @@
                 </div>
               </div>
             </div>
-
             <div class="swiper-slide campaign-cards__card campaign-card">
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_4.jpg" alt="ダイバーの集団が海で浮かんでいる様子">
@@ -453,35 +385,27 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
-
         <div class="campaign__swiper-buttons">
           <div class="swiper-button-prev campaign__button-prev"></div>
           <div class="swiper-button-next campaign__button-next"></div>
         </div>
-
         <div class="campaign__btn">
           <a href="#" class="button">
             <p>View more</p>
           </a>
         </div>
-
       </div>
-
     </section>
 
     <section id="about" class="about layout-about">
       <div class="about__inner inner">
-
         <div class="about__section-title section-title">
           <p class="section-title__eng">About us</p>
           <h2 class="section-title__ja">私たちについて</h2>
         </div>
-
         <div class="about__images">
-
           <div class="about__image-small">
             <picture>
               <source srcset="./assets/images/common/about_pc_small.jpg" media="(min-width:768px)">
@@ -494,15 +418,11 @@
               <img src="./assets/images/common/about_sp_large.jpg" alt="黄色と黒の2匹に鮮やかな熱帯魚が泳いでいる様子">
             </picture>
           </div>
-
         </div>
-
         <div class="about__content">
-
           <div class="about__subtitle">
             <p class="about__subtitle-text">Dive&nbsp;into<br>the&nbsp;Ocean</p>
           </div>
-
           <div class="about__wrap">
             <div class="about__text">
               <p class="about__text-text text">
@@ -510,38 +430,29 @@
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
               </p>
             </div>
-
             <div class="about__btn">
               <a href="#" class="button">
                 <p>View more</p>
               </a>
             </div>
-
           </div>
-
         </div>
-
       </div>
-
     </section>
 
     <section id="info" class="info layout-info">
       <div class="info__inner inner">
-
         <div class="info__section-title section-title">
           <p class="section-title__eng">Information</p>
           <h2 class="section-title__ja">ダイビング情報</h2>
         </div>
-
         <div class="info__wrap">
-
           <div class="info__img colorbox js-colorbox">
             <picture>
               <source srcset="./assets/images/common/info_pc.jpg" media="(min-width:768px)">
               <img src="./assets/images/common/info_sp.jpg" alt="透き通った海を泳ぐ熱帯魚">
             </picture>
           </div>
-
           <div class="info__body">
             <div class="info__subtitle title-line">
               <h3 class="info__subtitle-text">ライセンス講習</h3>
@@ -557,21 +468,16 @@
             </div>
           </div>
         </div>
-
       </div>
-
     </section>
 
     <section id="blog" class="blog layout-blog">
       <div class="blog__inner inner">
-
         <div class="blog__section-title section-title section-title--white">
           <p class="section-title__eng">Blog</p>
           <h2 class="section-title__ja">ブログ</h2>
         </div>
-
         <div class="blog__cards blog-cards">
-
           <div class="blog-cards__card blog-card">
             <a class="blog-card__link" href="#">
               <div class="blog-card__img">
@@ -589,7 +495,6 @@
               </div>
             </a>
           </div>
-
           <div class="blog-cards__card blog-card">
             <a class="blog-card__link" href="#">
               <div class="blog-card__img">
@@ -607,7 +512,6 @@
               </div>
             </a>
           </div>
-
           <div class="blog-cards__card blog-card">
             <a class="blog-card__link" href="#">
               <div class="blog-card__img">
@@ -625,31 +529,24 @@
               </div>
             </a>
           </div>
-
         </div>
-
         <div class="blog__btn ">
           <a href="#" class="button">
             <p>View more</p>
           </a>
         </div>
-
       </div>
     </section>
 
     <section id="voice" class="voice layout-voice">
       <div class="voice__inner inner">
-
         <div class="voice__section-title section-title">
           <p class="section-title__eng">Voice</p>
           <h2 class="section-title__ja">お客様の声</h2>
         </div>
-
         <div class="voice__cards voice-cards">
-
           <div class="voice-cards__card voice-card">
             <div class="voice-card__head">
-
               <div class="voice-card__left">
                 <div class="voice-card__meta">
                   <div class="voice-card__age">
@@ -663,15 +560,12 @@
                   <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
               </div>
-
               <div class="voice-card__right">
                 <div class="voice-card__img colorbox js-colorbox">
                   <img src="./assets/images/common/voice_1.jpg" alt="笑顔の女性の顔写真">
                 </div>
               </div>
-
             </div>
-
             <div class="voice-card__body">
               <div class="voice-card__text">
                 <p class="voice-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
@@ -680,12 +574,9 @@
                 </p>
               </div>
             </div>
-
           </div>
-
           <div class="voice-cards__card voice-card">
             <div class="voice-card__head">
-
               <div class="voice-card__left">
                 <div class="voice-card__meta">
                   <div class="voice-card__age">
@@ -699,15 +590,12 @@
                   <h3 class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
               </div>
-
               <div class="voice-card__right">
                 <div class="voice-card__img colorbox js-colorbox">
                   <img src="./assets/images/common/voice_2.jpg" alt="笑顔の男性の顔写真">
                 </div>
               </div>
-
             </div>
-
             <div class="voice-card__body">
               <div class="voice-card__text">
                 <p class="voice-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
@@ -716,39 +604,31 @@
                 </p>
               </div>
             </div>
-
           </div>
-
         </div>
-
         <div class="voice__btn ">
           <a href="#" class="button">
             <p>View more</p>
           </a>
-        </div>
 
+        </div>
       </div>
     </section>
 
     <section id="price" class="price layout-price">
       <div class="price__inner inner">
-
         <div class="price__section-title section-title">
           <p class="section-title__eng">Price</p>
           <h2 class="section-title__ja">料金一覧</h2>
         </div>
-
         <div class="price__wrap">
-
           <div class="price__img colorbox js-colorbox">
             <picture>
-              <source srcset="./assets/images/common/price_pc.jpg" media="(min-width:768px)" alt="赤い熱帯魚の群れが泳いでいる様子">
+              <source srcset="./assets/images/common/price_pc.jpg" media="(min-width:768px)">
               <img src="./assets/images/common/price_sp.jpg" alt="海亀が海中を泳いでいる様子">
             </picture>
           </div>
-
           <div class="price__table">
-
             <ul class="price__items">
               <li class="price__item">
                 <h3 class="price__sub-title title-line">ライセンス講習</h3>
@@ -797,35 +677,25 @@
                 </dl>
               </li>
             </ul>
-
           </div>
-
         </div>
-
         <div class="price__btn">
           <a href="#" class="button">
             <p>View more</p>
           </a>
         </div>
-
       </div>
     </section>
 
     <section id="contact" class="contact layout-contact">
       <div class="contact__inner inner">
-
         <div class="contact__content">
-
           <div class="contact__content-inner">
-
             <div class="contact__wrap">
-
               <div class="contact__top">
-
                 <div class="contact__logoBlock title-line">
                   <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="ヘッダーロゴ">
                 </div>
-
                 <div class="contact__flex">
                   <div class="contact__info text">
                     <p>沖縄県那覇市1-1</p>
@@ -833,7 +703,6 @@
                     <p>営業時間:8:30-19:00</p>
                     <p>定休日:毎週火曜日</p>
                   </div>
-
                   <div class="contact__map">
                     <iframe
                       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57272.985300498585!2d127.64350247426076!3d26.2109364369767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5697141a6b58b%3A0x2cd8aff616585e98!2z5rKW57iE55yM6YKj6KaH5biC!5e0!3m2!1sja!2sjp!4v1692465674459!5m2!1sja!2sjp"
@@ -842,34 +711,26 @@
                   </div>
                 </div>
               </div>
-
               <div class="contact__bottom">
-
                 <div class="contact__section-title section-title">
                   <p class="section-title__eng">Contact</p>
                   <h2 class="section-title__ja">お問い合わせ</h2>
                 </div>
-
                 <div class="contact__msg">
                   <p class="contact__msg-text">
                     ご予約・お問い合わせはコチラ
                   </p>
                 </div>
-
                 <div class="contact__btn">
                   <a href="#" class="button">
                     <p>Contact us</p>
                   </a>
                 </div>
-
               </div>
-
             </div>
           </div>
-
         </div>
       </div>
-
     </section>
 
     <div class="to-top" id="page-top">
@@ -880,14 +741,12 @@
 
   <footer class="footer">
     <div class="footer__inner inner">
-
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="#">
             <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
           </a>
         </div>
-
         <div class="footer__sns">
           <div class="footer__sns-items">
             <div class="footer__sns-item">
@@ -903,20 +762,11 @@
           </div>
         </div>
       </div>
-
       <nav class="footer__footer-nav footer-nav">
-
-        <!-- <div class="footer-nav__inner"> -->
         <div class="footer-nav__wrap">
-
-          <!-- <div class="footer-nav__body"> -->
-
           <div class="footer-nav__menu-items menu">
-
             <div class="menu__column-wrap">
-
               <div class="footer-nav__menu-item menu__column">
-
                 <div class="menu__item">
                   <div class="menu__title">
                     <a href="#campaign">キャンペーン</a>
@@ -927,19 +777,13 @@
                     <li><a href="#">ナイトダイビング</a></li>
                   </ul>
                 </div>
-
                 <div class="menu__item">
-
                   <div class="menu__title">
                     <a href="#about">私たちについて</a>
                   </div>
-
                 </div>
-
               </div>
-
               <div class="footer-nav__menu-item menu__column">
-
                 <div class="menu__item">
                   <div class="menu__title">
                     <a href="#info">ダイビング情報</a>
@@ -950,31 +794,20 @@
                     <li><a href="#">ファンダイビング</a></li>
                   </ul>
                 </div>
-
                 <div class="menu__item">
-
                   <div class="menu__title">
                     <a href="#blog">ブログ</a>
                   </div>
-
                 </div>
-
               </div>
-
             </div>
-
             <div class="menu__column-wrap">
-
               <div class="footer-nav__menu-item menu__column">
-
                 <div class="menu__item">
-
                   <div class="menu__title">
                     <a href="#voice">お客様の声</a>
                   </div>
-
                 </div>
-
                 <div class="menu__item">
                   <div class="menu__title">
                     <a href="#price">料金一覧</a>
@@ -985,70 +818,44 @@
                     <li><a href="#">ファンダイビング</a></li>
                   </ul>
                 </div>
-
               </div>
-
               <div class="footer-nav__menu-item menu__column">
-
                 <div class="menu__item">
-
                   <div class="menu__title">
                     <a href="#">よくある質問</a>
                   </div>
-
                 </div>
-
                 <div class="menu__item">
-
                   <div class="menu__title">
                     <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
                   </div>
-
                 </div>
-
                 <div class="menu__item">
-
                   <div class="menu__title">
                     <a href="#">利用規約</a>
                   </div>
-
                 </div>
-
                 <div class="menu__item">
-
                   <div class="menu__title">
                     <a href="#contact">お問い合わせ</a>
                   </div>
-
                 </div>
-
                 <div class="menu__item">
-
                   <div class="menu__title">
                     <a href="#contact">サイトマップ</a>
                   </div>
-
                 </div>
-
               </div>
-
             </div>
-
           </div>
-
-          <!-- </div> -->
-
         </div>
-        <!-- </div> -->
+        <div class="footer__copyright">
+          <p>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</p>
+        </div>
       </nav>
-
-      <div class="footer__copyright">
-        <p>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</p>
-      </div>
-
     </div>
-
   </footer>
+
 </body>
 
 </html>
