fix：DIVINGの文字をuppercaseを使った大文字表記へ変更

--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@
       </div>
       <div class="loading__header heroTitle">
         <div class="heroTitle__title js-loading-title">
-          <p>DIVING</p>
+          <p>diving</p>
         </div>
         <div class="heroTitle__subtitle js-loading-subtitle">
           <p>into the ocean</p>
@@ -263,7 +263,7 @@
           </div>
           <div class="mv__header heroTitle">
             <div class="heroTitle__title">
-              <p>DIVING</p>
+              <p>diving</p>
             </div>
             <div class="heroTitle__subtitle">
               <p>into the ocean</p>
