fix：loading用のjs-クラスの削除

--- a/src/index.html
+++ b/src/index.html
@@ -212,17 +212,17 @@
 
   <main>
 
-    <div class="loading js-loading">
-      <div class="loading__circle js-loading-circle"></div>
-      <div class="loading__wrap js-loading-imageWrap">
-        <div class="loading__left js-loading-left"></div>
-        <div class="loading__right js-loading-right"></div>
+    <div class="loading">
+      <div class="loading__circle"></div>
+      <div class="loading__wrap">
+        <div class="loading__left"></div>
+        <div class="loading__right"></div>
       </div>
       <div class="loading__header heroTitle">
-        <div class="heroTitle__title js-loading-title">
+        <div class="heroTitle__title">
           <p>diving</p>
         </div>
-        <div class="heroTitle__subtitle js-loading-subtitle">
+        <div class="heroTitle__subtitle">
           <p>into the ocean</p>
         </div>
       </div>
